# datagusto-platform

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  .env.sample  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.test.yml  pyproject.toml  session_store.json  test_langfuse.py  test_sync_full.py
backend/alembic/: env.py
backend/alembic/versions/: 31be7037d1fd_add_user_current_organization_id_and_.py  37b8c1fc5567_remove_current_organization_id_from_.py  3b888e0f3f74_add_tool_definition_and_revision_tables.py  5e808e8ad2f5_add_guardrail_tables.py  5f4880c2a5ea_drop_user_suspensions_table.py  6418537daf9b_remove_created_by_from_tool_definitions.py  6d4b87dbc76f_initial_revision.py  94177671ff04_add_agent_tables.py  b1c6b20c622c_init.py  c3706f5fffe8_first_revision.py  c418bef6f45e_init.py  c484ecd851dd_add_guardrails_table.py  c562324fe216_init.py  cbf7b11e29b5_add_run_id_to_observations.py  d08f3fb47e70_add_past_instructions_and_previous_.py  d212f974c4b0_remove_created_by_from_sessions.py  d2b1e36354cf_add_session_validation_log_table.py  d6b1246973c1_remove_user_organization_id.py  d885118396e3_add_guardrail_evaluation_log_and_update_.py  da4e02e864dd_add_auditlog_model_for_sdk_audit_events.py  dd6470b7fdd1_add_project_tables.py  e34b1360c985_init.py  eb131cdc2c70_add_session_and_alignment_history_tables.py  eccd794afe1a_add_trace_observation_tables.py  f43e6f5e9340_update_organization_models_with_.py
backend/app/: __init__.py  main.py
backend/app/agent/: graph.py  prompts.py  state.py
backend/app/api/: api.py
backend/app/core/: auth.py  config.py  database.py  dependencies.py  llm.py  multi_tenant.py  sdk_auth.py  security.py  supabase.py  test_database.py
backend/app/models/: __init__.py  agent.py  audit_log.py  base.py  guardrail.py  guardrail_evaluation_log.py  observation.py  organization.py  organization_member.py  project.py  project_member.py  session.py  session_validation_log.py  tool_definition.py  trace.py  user.py
backend/app/repositories/: __init__.py  agent_api_key_repository.py  agent_repository.py  base_repository.py  guardrail_assignment_repository.py  guardrail_evaluation_log_repository.py  guardrail_repository.py  langfuse_repository.py  observation_repository.py  organization_admin_repository.py  organization_member_repository.py  organization_owner_repository.py  organization_repository.py  project_member_repository.py  project_owner_repository.py  project_repository.py  session_alignment_history_repository.py  session_repository.py  session_validation_log_repository.py  supabase_repository.py  tool_definition_repository.py  trace_repository.py  user_auth_repository.py  user_profile_repository.py  user_repository.py  user_status_repository.py
backend/app/schemas/: __init__.py  agent.py  audit_log.py  guardrail.py  guardrail_evaluation.py  organization.py  organization_member.py  project.py  safety.py  session.py  tool_definition.py  trace.py  user.py
backend/app/services/: __init__.py  agent_service.py  auth_service.py  data_quality_service.py  evaluation_service.py  guardrail_evaluation_service.py  guardrail_service.py  organization_admin_service.py  organization_member_service.py  organization_owner_service.py  organization_service.py  permission_service.py  project_service.py  safety_service.py  session_service.py  tool_definition_service.py  trace_service.py  user_service.py
backend/docker/: 01-init-test-db.sql
backend/scripts/: run_tests.sh  test_cleanup.sh  test_setup.sh
backend/tests/: conftest.py  utils.py
backend/tests/api/: base.py  test_tools_endpoints.py
backend/tests/integration/: test_organization_workflows.py
backend/tests/performance/: test_query_performance.py
backend/tests/repositories/: __init__.py  conftest.py  test_agent_repositories.py  test_guardrail_repositories.py  test_organization_member_repository.py  test_organization_repository.py  utils.py  (+8 more)
(+248 files in other folders)
